--- a/app/src/main/res/layout/activity_statistiques.xml
+++ b/app/src/main/res/layout/activity_statistiques.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/statsTextView"
@@ -16,6 +16,6 @@
             android:text="Statistiques"
             android:textSize="18sp"
             android:textColor="#000000"
-            android:padding="8dp" />
+            android:padding="8dp"/>
     </LinearLayout>
 </ScrollView>
