--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/authLayout"
@@ -11,6 +12,18 @@
         android:orientation="vertical"
         android:gravity="center"
         tools:context=".AuthActivity">
+
+        <!-- Logo de l'entreprise -->
+        <ImageView
+            android:id="@+id/imageLogo"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginBottom="24dp"
+            android:contentDescription="@string/logo_description"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:src="@drawable/logo" />
+
 
         <TextView
             android:id="@+id/textTitle"
